<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="166dp"
    tools:context=".Activity.ItemListView">


    <FrameLayout
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@drawable/main_background"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_rating"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="80%" />
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/poster"
        android:background="@drawable/item_bacground"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/run_time"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/run_time"
            android:layout_width="45dp"
            android:layout_height="23dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_time"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="2h 2m" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textColor="@color/orange"
            android:textSize="12sp" />


        <com.codesgood.views.JustifiedTextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/icon_desc"
            android:layout_below="@+id/genre"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:text="@string/overview"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/icon_desc"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginEnd="50dp"
                android:drawableStart="@drawable/ic_event_black_15dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="2018" />

            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_black_15dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Released" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>